namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-activities-management-prod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-activities-management-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "activities-management"
    cloud-platform.justice.gov.uk/slack-alert-channel: "farsight-alerts"
    cloud-platform.justice.gov.uk/application: "Activities management"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-activities-management.git,https://github.com/ministryofjustice/hmpps-activities-management-api.git"
    cloud-platform.justice.gov.uk/team-name: "farsight-devs"
